# byte_talk

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/byte_talk/: byte_stream_handler.hpp  client.hpp  common_handlers.hpp  common_stream_handlers.hpp  length_prefixed_proto.hpp  proto_handler.hpp  reader.hpp  request.hpp  response.hpp  server.hpp  stream_handler.hpp  streamer.hpp  writer.hpp
src/: CMakeLists.txt  acceptor.cpp  acceptor.hpp  buffer.cpp  buffer.hpp  client.cpp  client.hpp  common_handlers.cpp  common_stream_handlers.cpp  connector.cpp  connector.hpp  epoll.cpp  epoll.hpp  length_prefixed_proto.cpp  logger.cpp  logger.hpp  server.cpp  server.hpp  socket.cpp  socket.hpp
src/net/: CMakeLists.txt  acceptor.cpp  acceptor.hpp  connector.cpp  connector.hpp  epoll.cpp  epoll.hpp  errors.cpp  errors.hpp  socket.cpp  socket.hpp
src/sockets/: CMakeLists.txt  acceptor.cpp  acceptor.hpp  connector.cpp  connector.hpp  epoll.cpp  epoll.hpp  socket.cpp  socket.hpp  socket_error.hpp
